feat: add WDCC social journey
